# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gen_diff/: __init__.py  engine.py  gendiff.py  json_dif.py  yml_dif.py
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  engine.py  gendiff.py  generate_diff.py
gendiff/scripts/: gendiff.py
tests/: test_format_decoder.py  test_generate_diff.py
